--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".auth.RegisterActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".QuestionActivity"></activity>
+        <activity android:name=".auth.RegisterActivity" />
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".QuestionActivity"
+            android:label="@string/title_activity_question"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
